--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		<script src=""></script>
 	</head>
 	<body>
-		<script defer src="/script.js"></script>
+		<script defer src="script.js"></script>
 	</body>
 </html>
