--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 		<script src=""></script>
 	</head>
 	<body>
+		<header>
+			<ul>
+				<li><a href="#title">Title</a></li>
+				<li><a href="#subtitle">Subtitle</a></li>
+				<li><a href="#image">Image</a></li>
+			</ul>
+		</header>
+
+		<main>
+			<h1 id="title" style="color: red" title="Document Pbject Model">DOM</h1>
+			<h3 id="subtitle">Documen Object Model</h3>
+			<img src="./dom.png" id="image" />
+		</main>
+
 		<script defer src="script.js"></script>
 	</body>
 </html>
